<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="@color/background"
        android:ems="10"
        android:gravity="end|center_vertical|bottom"
        android:maxLength="12"
        android:padding="10dp"
        android:textSize="48sp"
        android:textColor="@color/button_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <Button
        android:id="@+id/btnSeven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_background"
        android:text="@string/seven"
        android:textSize="18sp"
        style="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/button_text_color"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInput"
        app:layout_constraintEnd_toStartOf="@id/btnEight"
        app:layout_constraintBottom_toTopOf="@+id/btnFour"/>


    <Button
        android:id="@+id/btnEight"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_background"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/eight"
        app:layout_constraintStart_toEndOf="@+id/btnSeven"
        app:layout_constraintTop_toBottomOf="@+id/tvInput"
        app:layout_constraintEnd_toStartOf="@+id/btnNine"
        app:layout_constraintBottom_toTopOf="@+id/btnFive"
        style="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/button_text_color"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/btnNine"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_background"
        android:text="@string/nine"
        app:layout_constraintStart_toEndOf="@+id/btnEight"
        app:layout_constraintEnd_toStartOf="@+id/btnDivide"
        app:layout_constraintTop_toBottomOf="@+id/tvInput"
        app:layout_constraintBottom_toTopOf="@+id/btnSix"
        style="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/button_text_color"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/btnDivide"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/operator_btn_background"
        android:text="@string/divide"
        app:layout_constraintStart_toEndOf="@+id/btnNine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInput"
        app:layout_constraintBottom_toTopOf="@+id/btnMultiply"
        style="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/operator_text_color"
        android:textSize="25sp"
        />

    <Button
        android:id="@+id/btnFour"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_background"
        android:text="@string/four"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnFive"
        app:layout_constraintTop_toBottomOf="@+id/btnSeven"
        app:layout_constraintBottom_toTopOf="@+id/btnOne"
        style="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/button_text_color"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/btnFive"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@+id/btnFour"
        android:background="@drawable/btn_background"
        app:layout_constraintTop_toBottomOf="@+id/btnEight"
        app:layout_constraintEnd_toStartOf="@+id/btnSix"
        app:layout_constraintBottom_toTopOf="@+id/btnTwo"
        android:text="@string/five"
        style="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/button_text_color"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/btnSix"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_background"
        app:layout_constraintStart_toEndOf="@+id/btnFive"
        app:layout_constraintTop_toBottomOf="@+id/btnNine"
        app:layout_constraintEnd_toStartOf="@id/btnMultiply"
        app:layout_constraintBottom_toTopOf="@+id/btnThree"
        android:text="@string/six"
        style="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/button_text_color"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/btnMultiply"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/operator_btn_background"
        app:layout_constraintStart_toEndOf="@+id/btnSix"
        app:layout_constraintTop_toBottomOf="@+id/btnDivide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnSubtract"
        android:text="@string/multiply"
        style="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/operator_text_color"
        android:textSize="25sp"
        />

    <Button
        android:id="@+id/btnOne"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_background"
        app:layout_constraintTop_toBottomOf="@+id/btnFour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintEnd_toStartOf="@+id/btnTwo"
        app:layout_constraintBottom_toTopOf="@+id/btnDecimal"
        android:text="@string/one"
        style="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/button_text_color"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/btnTwo"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_background"
        app:layout_constraintTop_toBottomOf="@+id/btnFive"
        app:layout_constraintStart_toEndOf="@id/btnOne"
        app:layout_constraintEnd_toStartOf="@+id/btnThree"
        app:layout_constraintBottom_toTopOf="@+id/btnZero"
        android:text="@string/two"
        style="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/button_text_color"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/btnThree"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_background"
        app:layout_constraintTop_toBottomOf="@+id/btnSix"
        app:layout_constraintStart_toEndOf="@id/btnTwo"
        app:layout_constraintEnd_toStartOf="@+id/btnSubtract"
        app:layout_constraintBottom_toTopOf="@+id/btnClear"
        android:text="@string/three"
        style="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/button_text_color"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/btnSubtract"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/operator_btn_background"
        app:layout_constraintStart_toEndOf="@+id/btnThree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiply"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        android:text="@string/minus"
        style="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/operator_text_color"
        android:textSize="25sp"
        />

    <Button
        android:id="@+id/btnDecimal"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_background"
        app:layout_constraintTop_toBottomOf="@+id/btnOne"
        app:layout_constraintEnd_toStartOf="@+id/btnZero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnEqual"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:text="@string/decimal"
        style="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/button_text_color"/>

    <Button
        android:id="@+id/btnZero"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_background"
        app:layout_constraintTop_toBottomOf="@+id/btnTwo"
        app:layout_constraintStart_toEndOf="@+id/btnDecimal"
        app:layout_constraintEnd_toStartOf="@+id/btnClear"
        app:layout_constraintBottom_toTopOf="@+id/btnEqual"
        android:text="@string/zero"
        style="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/button_text_color"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/btnClear"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/clear_btn_background"
        app:layout_constraintTop_toBottomOf="@+id/btnThree"
        app:layout_constraintStart_toEndOf="@+id/btnZero"
        app:layout_constraintEnd_toStartOf="@+id/btnAdd"
        app:layout_constraintBottom_toTopOf="@+id/btnEqual"
        android:text="@string/clear"
        style="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/operator_text_color"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/btnAdd"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/operator_btn_background"
        style="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/operator_text_color"
        app:layout_constraintStart_toEndOf="@+id/btnClear"
        app:layout_constraintTop_toBottomOf="@+id/btnSubtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnEqual"
        android:text="@string/add"
        android:textSize="25sp"
        />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/equal"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:background="@drawable/equal_btn_background"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnClear"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/operator_text_color"
        
        />

    <Button
        android:visibility="gone"
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/operator_btn_background"
        android:layout_marginBottom="16dp"
        android:textSize="25sp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEqual"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerInside"
        style="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/button_text_color"
        android:foreground="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/operator_btn_background"
        android:layout_marginBottom="16dp"
        android:contentDescription= "@string/back"
        android:textSize="25sp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEqual"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_back"
        android:drawablePadding="8dp"
        style="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/button_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>